# ba_thesis-retroreflectors

./: README.md  README.org
doc/: retroreflectors.bib  retroreflectors.org
dsp/grc/: decode_iq_data.grc  iq_record.grc  live_demo.grc  shifting.grc  shifting2.grc
dsp/grc/blocks/gr-backscatter_decoder/: CMakeLists.txt  MANIFEST.md
dsp/grc/blocks/gr-backscatter_decoder/cmake/Modules/: backscatter_decoderConfig.cmake
dsp/grc/blocks/gr-backscatter_decoder/docs/: README.backscatter_decoder
dsp/grc/blocks/gr-backscatter_decoder/docs/doxygen/: Doxyfile.in
dsp/grc/blocks/gr-backscatter_decoder/docs/doxygen/other/: group_defs.dox  main_page.dox
dsp/grc/blocks/gr-backscatter_decoder/grc/: CMakeLists.txt  backscatter_decoder_simpleDecoder.xml
dsp/grc/blocks/gr-backscatter_decoder/include/backscatter_decoder/: CMakeLists.txt  api.h  simpleDecoder.h
dsp/grc/blocks/gr-backscatter_decoder/lib/: CMakeLists.txt  qa_backscatter_decoder.cc  qa_backscatter_decoder.h  simpleDecoder_impl.cc  simpleDecoder_impl.cc~  simpleDecoder_impl.h  test_backscatter_decoder.cc
dsp/grc/blocks/gr-backscatter_decoder/python/: CMakeLists.txt  __init__.py  qa_simpleDecoder.py
dsp/grc/blocks/gr-backscatter_decoder/swig/: CMakeLists.txt  backscatter_decoder_swig.i
dsp/grc/post_processing/: corr.c  main.c
pcb/baw_filter/: baw_filter-cache.lib  baw_filter.kicad_pcb  baw_filter.lib  baw_filter.pro  baw_filter.sch
pcb/baw_filter/qorvo_885062.pretty/: 885062.kicad_mod
pcb/firmware/testpatterns/: Makefile  testpatterns.c
pcb/retroreflector_devboard/: retroreflector_devboard-cache.lib  retroreflector_devboard.kicad_pcb  retroreflector_devboard.pro  retroreflector_devboard.sch
sim/microstrip/: capacitive_gap_filter.m  s21_db.csv  s21_db_old.csv
